refactor: update component templates to use self-closing tags

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header />
 <div class="container-xxl">
-  <router-outlet></router-outlet>
+  <router-outlet />
 </div>
 <app-footer />
 <app-toasts aria-live="polite" aria-atomic="true" />
