--- a/src/app/modules/collection/collection-filters-modal/collection-filters-modal.component.html
+++ b/src/app/modules/collection/collection-filters-modal/collection-filters-modal.component.html
@@ -12,24 +12,21 @@
       <!-- Type Filter -->
       <div class="mb-3">
         <div class="form-label">{{ t('card_type') }}</div>
-        <app-library-type-filter [types]="typeControl.value" (typesChange)="typeControl.setValue($event)">
-        </app-library-type-filter>
+        <app-library-type-filter [types]="typeControl.value" (typesChange)="typeControl.setValue($event)" />
       </div>
 
       <!-- Clan Filter -->
       <div class="mb-3">
         <div class="form-label">{{ t('clans') }}</div>
         <app-clan-filter [clans]="clanControl.value" (clansChange)="clanControl.setValue($event)"
-          [showNotRequired]="true">
-        </app-clan-filter>
+          [showNotRequired]="true" />
       </div>
 
       <!-- Discipline Filter -->
       <div class="mb-3">
         <div class="form-label">{{ t('disciplines') }}</div>
         <app-discipline-filter [disciplines]="disciplineControl.value"
-          (disciplinesChange)="disciplineControl.setValue($event)" [showNotRequired]="true" [showSuperior]="false">
-        </app-discipline-filter>
+          (disciplinesChange)="disciplineControl.setValue($event)" [showNotRequired]="true" [showSuperior]="false" />
       </div>
     </form>
     }
