--- a/src/app/modules/collection/collection/collection.component.html
+++ b/src/app/modules/collection/collection/collection.component.html
@@ -61,5 +61,5 @@
     </div>
   </div>
   <app-collection-cards-list [owned]="true" [editable]="true" [showBinders]="true"
-    [multiSelect]="multiSelect"></app-collection-cards-list>
+    [multiSelect]="multiSelect" />
 </ng-container>
