--- a/src/app/modules/deck-shared/print-proxy-modal/print-proxy-modal.component.html
+++ b/src/app/modules/deck-shared/print-proxy-modal/print-proxy-modal.component.html
@@ -7,7 +7,7 @@
       (click)="modal.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
-    <app-print-proxy #printProxy [cards]="cards" [title]="title"> </app-print-proxy>
+    <app-print-proxy #printProxy [cards]="cards" [title]="title" />
   </div>
   <div class="modal-footer">
     <div class="d-flex justify-content-center align-self-center w-100">
