--- a/src/app/modules/vtes-ai/vtes-ai.component.html
+++ b/src/app/modules/vtes-ai/vtes-ai.component.html
@@ -93,7 +93,7 @@
         }
         @if(loading$ | async){
         <div class="row justify-content-start" #item>
-          <app-loading class="w-auto" [size]="2"></app-loading>
+          <app-loading class="w-auto" [size]="2" />
         </div>
         }
         }
