--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -75,9 +75,9 @@
         </li>
       </ul>
       <ul class="navbar-nav">
-        <app-lang-selector></app-lang-selector>
+        <app-lang-selector />
         @if (themeEnabled) {
-        <app-theme-selector></app-theme-selector>
+        <app-theme-selector />
         }
         <li
           class="nav-item nav-link position-relative notification me-0 me-lg-2 d-flex justify-content-start align-items-center"
