--- a/src/app/shared/components/markdown-help-modal/markdown-help-modal.component.html
+++ b/src/app/shared/components/markdown-help-modal/markdown-help-modal.component.html
@@ -123,7 +123,7 @@
     punctuation in the card's name must be present. For example, <code>[[card:British Museum, London, The]]</code> with
     result in the following:
   </p>
-  <p><app-markdown-card name="British Museum, London, The" image="/img/cards/102236.jpg"></app-markdown-card></p>
+  <p><app-markdown-card name="British Museum, London, The" image="/img/cards/102236.jpg" /></p>
   <h4>Embedding Disciplines</h4>
   <p><strong>Discipline</strong> — Many of Vampire: The Eternal Struggle's disciplines symbols are available for use in
     the
