--- a/src/app/modules/collection/binder/binder.component.html
+++ b/src/app/modules/collection/binder/binder.component.html
@@ -72,6 +72,6 @@
   </div>
   }
   <app-collection-cards-list [owned]="!isPublic" [editable]="!isPublic" [multiSelect]="multiSelect"
-    [showBinders]="false"></app-collection-cards-list>
+    [showBinders]="false" />
   }
 </ng-container>
