--- a/src/app/modules/collection/collection-cards-list/collection-card/collection-card.component.html
+++ b/src/app/modules/collection/collection-cards-list/collection-card/collection-card.component.html
@@ -2,8 +2,8 @@
 {{ cardName() }}
 }@else{
 @if(isCrypt()){
-<app-crypt [card]="{id: cardId(), number: 0}" [background]="false" [setAbbrev]="setAbbrev()"></app-crypt>
+<app-crypt [card]="{id: cardId(), number: 0}" [background]="false" [setAbbrev]="setAbbrev()" />
 }@else {
-<app-library [card]="{id: cardId(), number: 0}" [background]="false" [setAbbrev]="setAbbrev()"></app-library>
+<app-library [card]="{id: cardId(), number: 0}" [background]="false" [setAbbrev]="setAbbrev()" />
 }
 }
