--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -23,7 +23,7 @@
     <div class="d-flex flex-column w-100 justify-content-center align-self-center">
       <div class="w-100 justify-content-center align-self-center text-start">
         <app-markdown-textarea [control]="commentControl" [placeholder]="t('comment_placeholder')"
-          [label]="t('comment')"></app-markdown-textarea>
+          [label]="t('comment')" />
       </div>
       <div class="mt-2">
         <button type="button" class="btn btn-outline-primary" (click)="editComment()" [title]="t('edit_title')">
