--- a/src/app/modules/deck-builder/draw-cards/draw-cards.component.html
+++ b/src/app/modules/deck-builder/draw-cards/draw-cards.component.html
@@ -22,7 +22,7 @@
         </li>
         @for (crypt of cryptList()| slice:0:cryptDrawn(); track crypt) {
         <div>
-          <app-crypt [card]="crypt" [cryptSize]="cryptList().length" [withDrawProbability]="true"></app-crypt>
+          <app-crypt [card]="crypt" [cryptSize]="cryptList().length" [withDrawProbability]="true" />
         </div>
         }
       </ul>
@@ -38,7 +38,7 @@
         </li>
         @for (library of libraryList()| slice:0:libraryDrawn(); track library) {
         <div>
-          <app-library [card]="library" [librarySize]="libraryList().length" [withDrawProbability]="true"></app-library>
+          <app-library [card]="library" [librarySize]="libraryList().length" [withDrawProbability]="true" />
         </div>
         }
       </ul>
