--- a/src/app/modules/deck-builder/library-builder/library-builder.component.html
+++ b/src/app/modules/deck-builder/library-builder/library-builder.component.html
@@ -13,7 +13,7 @@
             [formControl]="nameFormControl">
         </div>
         <app-toggle-icon class="col-auto d-inline-block" [active]="(displayMode$ |async)!"
-          (toggleChange)="onChangeDisplayMode($event)" [options]="displayModeOptions"></app-toggle-icon>
+          (toggleChange)="onChangeDisplayMode($event)" [options]="displayModeOptions" />
         <div ngbDropdown class="col-auto d-inline-block">
           <button type="button" class="btn btn-primary" id="dropdownSortBy" ngbDropdownToggle
             [disabled]="sortByTrigramSimilarity">
@@ -63,7 +63,7 @@
     <div class="row">
       @if ((isMobileOrTablet$ | async) === false) {
       <div class="col-4">
-        <ng-container *ngTemplateOutlet="filter"></ng-container>
+        <ng-container *ngTemplateOutlet="filter" />
       </div>
       }
       <div [ngClass]="{
@@ -84,7 +84,7 @@
           <div class="col-6 col-md-auto">
             <app-library-grid-card [card]="getCard(library)" [librarySize]="(librarySize$ | async)!"
               [withControls]="true" (cardAdded)="addCard($event)"
-              (cardRemoved)="removeCard($event)"></app-library-grid-card>
+              (cardRemoved)="removeCard($event)" />
           </div>
           }
         </div>
@@ -92,7 +92,7 @@
         @for (library of (library$ | async)! ; track library.id) {
         <ul class="col list-group">
           <app-library [card]="getCard(library)" [librarySize]="(librarySize$ | async)!" [withControls]="true"
-            (cardAdded)="addCard($event)" (cardRemoved)="removeCard($event)"></app-library>
+            (cardAdded)="addCard($event)" (cardRemoved)="removeCard($event)" />
         </ul>
         }
         }
@@ -107,7 +107,7 @@
         (click)="modal.dismiss()"></button>
     </div>
     <div class="modal-body">
-      <ng-container *ngTemplateOutlet="filter"></ng-container>
+      <ng-container *ngTemplateOutlet="filter" />
     </div>
     <div class="modal-footer">
       <div class="d-grid gap-2 w-100">
