--- a/src/app/modules/deck-shared/crypt/crypt.component.html
+++ b/src/app/modules/deck-shared/crypt/crypt.component.html
@@ -29,7 +29,7 @@
       }
     </h6>
     @if(card.collection){
-    <app-collection-card-mini-stats [card]="card"></app-collection-card-mini-stats>
+    <app-collection-card-mini-stats [card]="card" />
     }
   </ng-template>
   <div class="row align-items-center">
@@ -59,7 +59,7 @@
         <div class="col-9 align-items-center">
           @if(card.collection){
           <div class="float-start me-1">
-            <app-collection-card-tracker [card]="card"></app-collection-card-tracker>
+            <app-collection-card-tracker [card]="card" />
           </div>
           }
           @if( crypt.i18n && crypt.i18n.name !== crypt.name ){
@@ -126,6 +126,6 @@
   <ngx-skeleton-loader count="1" animation="progress" [theme]="{
         height: '20px',
         'margin-bottom': '0'
-      }"></ngx-skeleton-loader>
+      }" />
 </div>
 }
