--- a/src/app/modules/deck-shared/library-grid-card/library-grid-card.component.html
+++ b/src/app/modules/deck-shared/library-grid-card/library-grid-card.component.html
@@ -9,10 +9,10 @@
     @if(card().collection){
     <div class="collection-tracker">
       <div class="position-absolute top-0 end-0 badge border border-secondary bg-dark m-2 mt-5 fs-7">
-        <app-collection-card-tracker [card]="card()"></app-collection-card-tracker>
+        <app-collection-card-tracker [card]="card()" />
       </div>
       <div class="collection-badge position-absolute bottom-0 start-50 translate-middle badge bg-dark fs-7">
-        <app-collection-card-mini-stats [card]="card()"></app-collection-card-mini-stats>
+        <app-collection-card-mini-stats [card]="card()" />
       </div>
     </div>
     }
