--- a/src/app/modules/deck/deck.component.html
+++ b/src/app/modules/deck/deck.component.html
@@ -1,6 +1,6 @@
 @if (isLoading$ | async) {
 <div class="alert alert-light">
-  <app-loading [size]="10"></app-loading>
+  <app-loading [size]="10" />
   <div style="height: 100vw"></div>
 </div>
 }
@@ -82,7 +82,7 @@
                   <div class="col-6 col-md-12">
                     <div class="deck-stat-card text-center p-3 rounded-3 bg-light shadow-sm">
                       <h4 class="display-4 text-primary mb-0">
-                        <animated-digit [digit]="deck.views" [duration]="2000"></animated-digit>
+                        <animated-digit [digit]="deck.views" [duration]="2000" />
                       </h4>
                       <p class="text-uppercase text-muted mb-0">{{ t('views') }}</p>
                       <i class="bi bi-eye-fill text-primary"></i>
@@ -99,8 +99,7 @@
                         <ngb-rating [ngbTooltip]="t('rate_deck')" placement="bottom" #ratingTooltip="ngbTooltip"
                           [rate]="deck.rate ?? 0" [starTemplate]="starTemplate"
                           [readonly]="!(isAuthenticated$ | async)! || (userDisplayName$ | async) === deck.author"
-                          [max]="5" (rateChange)="rateDeck($event)">
-                        </ngb-rating>
+                          [max]="5" (rateChange)="rateDeck($event)" />
                       </div>
                       <p class="text-muted mb-0">
                         <i class="bi bi-people-fill"></i>
@@ -236,13 +235,13 @@
       </div>
       <div class="d-none d-md-flex flex-grow-1 d-flex justify-content-end">
         <app-toggle-icon [active]="(displayMode$ |async)!" (toggleChange)="onChangeDisplayMode($event)"
-          [options]="displayModeOptions"></app-toggle-icon>
+          [options]="displayModeOptions" />
       </div>
       <div class="d-md-none flex-grow-1"></div>
     </div>
     <div class="d-md-none mt-3 d-flex justify-content-center">
       <app-toggle-icon [active]="(displayMode$ |async)!" (toggleChange)="onChangeDisplayMode($event)"
-        [options]="displayModeOptions"></app-toggle-icon>
+        [options]="displayModeOptions" />
     </div>
     <div class="col-12 text-center mt-2">
       <div class="row justify-content-center">
@@ -261,7 +260,7 @@
         @for (crypt of deck.crypt; track crypt) {
         <div class="col-6 col-md-auto">
           <app-crypt-grid-card [card]="crypt" [cryptSize]="deck.stats.crypt"
-            (click)="openCryptCard(crypt, deck.crypt!)"></app-crypt-grid-card>
+            (click)="openCryptCard(crypt, deck.crypt!)" />
         </div>
         }
       </div>
@@ -270,7 +269,7 @@
         @for (crypt of deck.crypt; track crypt) {
         <ul class="col list-group">
           <app-crypt [card]="crypt" [cryptSize]="deck.stats.crypt" (click)="openCryptCard(crypt, deck.crypt!)"
-            [disablePopover]="(isMobileOrTablet$ | async)!" [disableClickPopover]="true"></app-crypt>
+            [disablePopover]="(isMobileOrTablet$ | async)!" [disableClickPopover]="true" />
         </ul>
         }
       </div>
@@ -310,13 +309,13 @@
       </div>
       <div class="d-none d-md-flex flex-grow-1 d-flex justify-content-end">
         <app-toggle-icon [active]="(displayMode$ |async)!" (toggleChange)="onChangeDisplayMode($event)"
-          [options]="displayModeOptions"></app-toggle-icon>
+          [options]="displayModeOptions" />
       </div>
       <div class="d-md-none flex-grow-1"></div>
     </div>
     <div class="d-md-none mt-3 d-flex justify-content-center">
       <app-toggle-icon [active]="(displayMode$ |async)!" (toggleChange)="onChangeDisplayMode($event)"
-        [options]="displayModeOptions"></app-toggle-icon>
+        [options]="displayModeOptions" />
     </div>
 
     <div class="col-12 text-center mt-2">
@@ -353,18 +352,18 @@
     </div>
     <div class="col-12 mt-3">
       @if (deck.library) {
-      <app-library-list [libraryList]="deck.library" [displayMode]="(displayMode$ |async)!"></app-library-list>
+      <app-library-list [libraryList]="deck.library" [displayMode]="(displayMode$ |async)!" />
       }
     </div>
     <app-ad-sense adClient="ca-pub-7379021241824282" adSlot="8573339569" adFormat="auto"
-      fullWidthResponsive="true"></app-ad-sense>
+      fullWidthResponsive="true" />
     @if(similarDecks$ | async; as similarDecks) {
     <div class="col-12 d-flex justify-content-center mt-3">
       <h2>{{ t('similar_decks') }}</h2>
     </div>
     <div class="row">
       @for(deck of similarDecks; track deck) {
-      <app-deck-card class="col-12 col-md-6" [deck]="deck" (tagClick)="onTag($event)"></app-deck-card>
+      <app-deck-card class="col-12 col-md-6" [deck]="deck" (tagClick)="onTag($event)" />
       }
     </div>
     <div class="col-12 d-flex justify-content-center mt-3">
@@ -378,7 +377,7 @@
       <h2>{{ t('comments') }}</h2>
     </div>
     <div class="col-12">
-      <app-comments [deckId]="id"></app-comments>
+      <app-comments [deckId]="id" />
     </div>
   </main>
   }
