--- a/src/app/modules/decks/decks.component.html
+++ b/src/app/modules/decks/decks.component.html
@@ -53,7 +53,7 @@
       @if (!(isMobileOrTablet$ | async)!) {
       <div class="col-3 filters-desktop">
         <div class="filters-desktop-container">
-          <app-deck-filters #filters (resetFilters)="reset()"></app-deck-filters>
+          <app-deck-filters #filters (resetFilters)="reset()" />
         </div>
       </div>
       }
@@ -66,7 +66,7 @@
           @if ((decks$ | async)!; as decks) {
           @for (deck of decks; track deck) {
           <div class="col-12 px-2">
-            <app-deck-card [deck]="deck" (tagClick)="onTagClick($event)"></app-deck-card>
+            <app-deck-card [deck]="deck" (tagClick)="onTagClick($event)" />
           </div>
           }
           @if (!(isLoading$ | async)! && decks.length === 0) {
@@ -82,14 +82,14 @@
         <div>
           <div class="col-12 px-2">
             @for (deck of decks; track deck) {
-            <app-deck-restorable-card [deck]="deck"></app-deck-restorable-card>
+            <app-deck-restorable-card [deck]="deck" />
             }
           </div>
         </div>
         }
         @if (isLoading$ | async) {
         <div class="alert alert-light">
-          <app-loading></app-loading>
+          <app-loading />
           <div style="height: 100vh"></div>
         </div>
         } @else if((hasMore$ | async)!) {
@@ -121,7 +121,7 @@
       <button type="button" class="btn-close" aria-label="Close" (click)="offcanvas.dismiss('Cross click')"></button>
     </div>
     <div class="offcanvas-body">
-      <app-deck-filters #filters (resetFilters)="reset()"></app-deck-filters>
+      <app-deck-filters #filters (resetFilters)="reset()" />
     </div>
     <div class="offcanvas-footer">
       <div class="d-grid gap-2">
