--- a/src/app/modules/home/home-section/home-section.component.html
+++ b/src/app/modules/home/home-section/home-section.component.html
@@ -8,7 +8,7 @@
         <div class="row">
           @for (deck of decks; track deck) {
             <div class="col-12">
-              <app-deck-card [deck]="deck" height="170px" (tagClick)="onTagClick($event)"></app-deck-card>
+              <app-deck-card [deck]="deck" height="170px" (tagClick)="onTagClick($event)" />
             </div>
           }
         </div>
@@ -20,7 +20,7 @@
             <div class="col-12">
               <div class="deck-card border border-2 rounded-3 center hover-shadow my-2 text-black border-dark"
                 style="min-height: 190px">
-                <app-loading></app-loading>
+                <app-loading />
               </div>
             </div>
           }
