--- a/src/app/modules/statistics/statistics.component.html
+++ b/src/app/modules/statistics/statistics.component.html
@@ -16,23 +16,22 @@
         </div>
       </div>
       <div class="col">
-        <ngx-slider id="globalYear" [options]="{ floor: 1998, ceil: currentYear, step: 1 }" formControlName="year">
-        </ngx-slider>
+        <ngx-slider id="globalYear" [options]="{ floor: 1998, ceil: currentYear, step: 1 }" formControlName="year" />
       </div>
     </form>
     @if (rangeBehavior|async; as range) {
     <div class="row row-cols-1 g-4 mt-4">
       @if (disciplineStatistics$ | async; as disciplines) {
       <app-line-chart class="col" [title]="t('disciplines')" [range]="range" [labels]="years"
-        [statistics]="disciplines"></app-line-chart>
+        [statistics]="disciplines" />
       }
       @if (clanStatistics$ | async; as clans) {
       <app-line-chart class="col" [title]="t('clans')" [range]="range" [labels]="years"
-        [statistics]="clans"></app-line-chart>
+        [statistics]="clans" />
       }
       @if (tagStatistics$ | async; as tags) {
       <app-line-chart class="col" [title]="t('playstyle')" [range]="range" [labels]="years"
-        [statistics]="tags"></app-line-chart>
+        [statistics]="tags" />
       }
     </div>
     }
@@ -55,9 +54,9 @@
     @if (statistics$ | async; as statistics) {
     <div class="row row-cols-1 row-cols-lg-2 g-4">
       <app-bar-chart class="col" [title]="t('disciplines')" [labels]="disciplines"
-        [statistics]="statistics.disciplines"></app-bar-chart>
-      <app-bar-chart class="col" [title]="t('clans')" [labels]="clans" [statistics]="statistics.clans"></app-bar-chart>
-      <app-radar-chart class="col" [title]="t('playstyle')" [statistics]="statistics.tags"></app-radar-chart>
+        [statistics]="statistics.disciplines" />
+      <app-bar-chart class="col" [title]="t('clans')" [labels]="clans" [statistics]="statistics.clans" />
+      <app-radar-chart class="col" [title]="t('playstyle')" [statistics]="statistics.tags" />
     </div>
     }
   </div>
