--- a/src/app/modules/vtesdle/vtesdle.component.html
+++ b/src/app/modules/vtesdle/vtesdle.component.html
@@ -30,7 +30,7 @@
         @if (cardId) {
         <img [src]="getImageUrl()" class="card-image" />
         } @else {
-        <app-loading [size]="10"></app-loading>
+        <app-loading [size]="10" />
         }
       </div>
     </div>
@@ -40,7 +40,7 @@
       @if (r.adv) {
       <i class="vtes advanced"></i>
       }
-      <ngb-highlight class="align-top ms-1" [result]="r.name" [term]="t"></ngb-highlight>
+      <ngb-highlight class="align-top ms-1" [result]="r.name" [term]="t" />
     </ng-template>
     <div class="mt-2 row">
       @if (lives > 0 && !guessed) {
@@ -77,8 +77,7 @@
       <span class="heart" [class.full]="fill === 100">&hearts;
       </span>
     </ng-template>
-    <ngb-rating [rate]="lives" [starTemplate]="heartTemplate" [readonly]="true" [max]="maxLives">
-    </ngb-rating>
+    <ngb-rating [rate]="lives" [starTemplate]="heartTemplate" [readonly]="true" [max]="maxLives" />
   </div>
   <div>
     {{ t('remaining_lives', { lives }) }}
