--- a/src/app/modules/collection/collection-filters-modal/collection-filters-modal.component.html
+++ b/src/app/modules/collection/collection-filters-modal/collection-filters-modal.component.html
@@ -34,7 +34,7 @@
 
   <div class="modal-footer">
     <button type="button" class="btn btn-secondary" (click)="onClear()">
-      {{ t('clear_filters') }}
+      {{ t('reset') }}
     </button>
     <button type="button" class="btn btn-outline-secondary" (click)="onCancel()">
       {{ 'shared.cancel' | transloco }}
